Fixed: Toolbar Button labels overlap
Fixes #7553

--- a/frontend/src/Components/Page/Toolbar/PageToolbarButton.css
+++ b/frontend/src/Components/Page/Toolbar/PageToolbarButton.css
@@ -2,7 +2,8 @@
   composes: link from '~Components/Link/Link.css';
 
   padding-top: 4px;
-  width: $toolbarButtonWidth;
+  min-width: $toolbarButtonWidth;
+  width: min-content;
   text-align: center;
 
   &:hover {
